--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ RAT.
                 <ul class="conta">
                 <h1><div aling="right"><li><img class="BTC" src="images\BTC.png" alt=""/></div></li></h1>
                  <ul class="conta"></ul>
-                   <li><img src="images\frame.png" alt="BTC"></li>
+                   <li><img src="images\QR_code.png" alt="BTC"></li>
                   </ul>
                </ul>
                </div>
