--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="es">
    <head>
@@ -417,22 +415,23 @@ RAT.
                      </ul>
                   </div>
                    
-               <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
-                <h3>Donar BTC </h3>
-                <ul class="conta">
-                <h1><div aling="right"><li><img class="BTC" src="images\BTC.png" alt=""/></div></li></h1>
-                 <ul class="conta"></ul>
-                   <li><img src="images\QR_code.png" alt="BTC"></li>
-                  </ul>
-               </ul>
-               </div>
+                  <div class="col-xl-3 col-lg-3 col-md-6 col-sm-6">
+                     <h3>Donar BTC </h3>
+                     <ul class="conta">
+                        <li> 
+                        </li>
+                        <li>
+                           <img src="images/QR_code.png" alt="QR Code for BTC Donation" />
+                        </li>
+                     </ul>
+                  </div>
                </div>
             </div>
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2024 All Rights Reserved. Design by AsesorL</p>
+                        <p>© 2025 All Rights Reserved. Design by AsesorL</p>
                      </div>
                   </div>
                </div>
